<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_RangeCheckDefaultParameters" Id="{cd896c54-83df-4c7a-ba12-9f014dfed47a}">
    <Declaration><![CDATA[TYPE ST_RangeCheckDefaultParameters :
STRUCT
	fRestoreDifference : REAL; //difference to upper or lower limit to restore algorithm permission
	tTaskCycleTime : TIME;
	tCtrlCycleTime : TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>